Bug 975947 - Fix generational GC's interaction with the barrier verifier; r=sfink